src/test/ui/parser/mismatched-braces/missing-close-brace-in-trait.stderr
error: this file contains an unclosed delimiter
  --> $DIR/missing-close-brace-in-trait.rs:12:65
   |
LL | trait T {
   |         - unclosed delimiter
...
LL | fn main() {}
   |                                                                 ^

error: struct is not supported in `trait`s or `impl`s
  --> $DIR/missing-close-brace-in-trait.rs:4:1
   |
LL | pub(crate) struct Bar<T>();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: implementation is not supported in `trait`s or `impl`s
  --> $DIR/missing-close-brace-in-trait.rs:7:1
   |
LL | impl T for Bar<usize> {
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

